feat: Added new activity and intent to it.
- Added list of SOPs activity

- Intent from categoryadapter passes teh category title

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         </activity>
         <activity
             android:name=".AddCategory"
-            android:label="@string/title_activity_add_category"></activity>
+            android:label="@string/title_activity_add_category" />
+        <activity
+            android:name=".ListofSOPs"
+            android:label="@string/title_activity_listof_sops"></activity>
     </application>
 
 </manifest>
