--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
 //    PICASSO
     implementation 'com.squareup.picasso:picasso:2.71828'
+//    ROOM DATABASE
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
 
 apply plugin: 'com.google.gms.google-services'
