--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddCategory"
+            android:name=".Categories.AddCategory"
             android:label="@string/title_activity_add_category" />
         <activity
-            android:name=".ListofSOPs"
+            android:name=".ListofSOPs.ListofSOPs"
             android:label="@string/title_activity_listof_sops"></activity>
     </application>
 
