feat: layout for new sop
-created layout for sop from intent from list of sops

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".ListofSOPs.ListofSOPs"
             android:label="@string/title_activity_listof_sops"></activity>
+        <activity android:name=".ListofSOPs.AddSOP" />
     </application>
 
 </manifest>
