FEAT: added step details and passed info to it
-Created Step Actvity and XML.

-Passed picture, description, step number, and title to activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".Steps.AddStep" />
         <activity
             android:name=".Steps.ListOfSteps"
-            android:label="@string/title_list_of_steps"></activity>
+            android:label="@string/title_list_of_steps" />
+        <activity android:name=".Steps.StepActivity"></activity>
     </application>
 
 </manifest>
