--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,11 @@ dependencies {
 //    BUTTER KNIFE
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
-//    PICASSO
-    implementation 'com.squareup.picasso:picasso:2.71828'
 //    ROOM DATABASE
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+//    GLIDE
+    implementation "com.github.bumptech.glide:glide:4.8.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
