Bug: Firebase dependancies work and builds

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:name=".Steps.ListOfSteps"
             android:label="@string/title_list_of_steps" />
         <activity android:name=".Steps.StepActivity"></activity>
+        <activity android:name=".Firebase.Firebase" />
     </application>
 
 </manifest>
