--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -41,6 +40,14 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 //    GLIDE
     implementation "com.github.bumptech.glide:glide:4.8.0"
+//    FIREBASE
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.0'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+//    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+//    implementation 'com.google.firebase:firebase-storage:16.0.5'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
