Firebase: Firebase Auth UI and Username
- Must create an account using firebase Auth UI

- Also create username which is unique

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:label="@string/title_list_of_steps" />
         <activity android:name=".Steps.StepActivity"></activity>
         <activity android:name=".Firebase.Firebase" />
+        <activity android:name=".Firebase.Firebase$FirebaseData" />
     </application>
 
 </manifest>
