Firebase: sign in and search users
- new users sign in with auth
- create username
- then search users

-exsisting users go straight to search users

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".Steps.StepActivity"></activity>
         <activity android:name=".Firebase.Firebase" />
         <activity android:name=".Firebase.Firebase$FirebaseData" />
+        <activity android:name=".Firebase.ShareWithUser" />
     </application>
 
 </manifest>
