--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'PureImaginationApps'
+            keyPassword 'And2018!'
+            storeFile file('C:/Users/Edgoo/Desktop/The Handbook.jks')
+            storePassword 'Thb2019!'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "mysop.pia.com"
@@ -15,6 +23,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
+            debuggable false
         }
     }
     compileOptions {
@@ -24,7 +37,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
@@ -32,21 +45,20 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    BUTTER KNIFE
+    //    BUTTER KNIFE
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
-//    ROOM DATABASE
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    //    ROOM DATABASE
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-//    GLIDE
-    implementation "com.github.bumptech.glide:glide:4.8.0"
-//    FIREBASE
+    //    GLIDE
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //    FIREBASE
     implementation 'com.firebaseui:firebase-ui-auth:4.3.0'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
-
 }
 
 apply plugin: 'com.google.gms.google-services'
