--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
+//    ANIMATION LIBRARY
+    implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
